infra/k8s/blog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: nahidh597/blog
---
apiVersion: v1
kind: Service
metadata:
  name: blog-srv
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
  - name: blog
    protocol: TCP
    port: 3000
    targetPort: 3000
