infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
        - name: comment-service
          image: nahidh597/comment-service
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service-srv
spec:
  selector:
    app: comment-service
  type: ClusterIP
  ports:
  - name: comment-service
    protocol: TCP
    port: 4001
    targetPort: 4001
