infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts
  type: NodePort
  ports:
  - name: posts
    protocol: TCP
    port: 4000
    targetPort: 4000
