infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-service
  template:
    metadata:
      labels:
        app: query-service
    spec:
      containers:
        - name: query-service
          image: nahidh597/query-service
---
apiVersion: v1
kind: Service
metadata:
  name: query-service-srv
spec:
  selector:
    app: query-service
  type: ClusterIP
  ports:
  - name: query-service
    protocol: TCP
    port: 4002
    targetPort: 4002
