infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: 'true'
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /posts/create
        backend:
          serviceName: post-clusterip-srv
          servicePort: 4000
      - path: /posts
        backend:
          serviceName: query-service-srv
          servicePort: 4002
      - path: /posts/?(.*)/comments
        backend:
          serviceName: comment-service-srv
          servicePort: 4001
      - path: /?(.*)
        backend:
          serviceName: blog-srv
          servicePort: 3000
